--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                </li>
 
                <li class="nav__item">
-                  <a href="#projects" class="nav__link">Projectos</a>
+                  <a href="#projects" class="nav__link">Proyectos</a>
                </li>
 
                <li class="nav__item">
@@ -221,8 +221,8 @@
                   </div>
 
                   <p class="services__description">
-                  <h2 class="srvices__title">Aplicación mobil</h2>
-                  Hoy en día el mayor acceso a la información se encuentra en la palma de nuestra mano, por eso es
+                     Hoy en día el mayor acceso a la información se encuentra en la palma de nuestra mano, por eso es
+                     <h2 class="srvices__title">Aplicación móvil</h2>
                   importante saber programar también dispositivos móviles
                   </p>
                </div>
