--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
                   </div>
 
                   <p class="services__description">
-                     Hoy en día el mayor acceso a la información se encuentra en la palma de nuestra mano, por eso es
                      <h2 class="srvices__title">Aplicación móvil</h2>
+                     Hoy en día el mayor acceso a la información se encuentra en la palma de nuestra mano, por eso es
                   importante saber programar también dispositivos móviles
                   </p>
                </div>
@@ -432,7 +432,7 @@
             </li>
 
             <li>
-               <a href="#projects" class="footer__link">Projectos</a>
+               <a href="#projects" class="footer__link">Proyectos</a>
             </li>
 
          </ul>
