--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <!--==================== PROJECTS ====================-->
       <section class="projects section" id="projects">
          <h2 class="section__title-1">
-            <span>Projectos</span>
+            <span>Proyectos</span>
          </h2>
 
          <div class="projects__container container grid">
